Fix headers aligning and page visualization.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,8 @@
   margin-top: 20px;
 }
 
-.title{
+h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
+
+.title-adjust { padding-right: 450px;}
